--- a/asesoria/TA-1.html
+++ b/asesoria/TA-1.html
@@ -4,19 +4,33 @@
 <head>
     <style>
         body {
+            display:25%;
+            margin-left: 25%;
+            margin-right: 25%;
+
             background-color: lightblue;
 
         }
         h1 {
+           margin-top: 5%;
+
+            margin-left: 15%;
             color:darkred;
             font-family:Tahoma;
         }
         h2 {
+            margin-top: 7%;
+        
+            margin-left: 10%;
+
             color:purple;
 
             font-family: Verdana;
         }
         p {
+            margin-right: 25%;
+            margin-left: 5%;
+
             color:darkslateblue;
 
         }
