--- a/asesoria/TA-1.html
+++ b/asesoria/TA-1.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            display:25%;
+            border-color:khaki;
             margin-left: 25%;
             margin-right: 25%;
 
